Scratchpad styling issues fixed
scratchpad remove icon
scratchpad horizontal scroll

--- a/app/scripts/superdesk-items-common/styles/media-archive.less
+++ b/app/scripts/superdesk-items-common/styles/media-archive.less
@@ -557,6 +557,7 @@
 				max-width: @sfbox_minWidth;
 				font-size: 12px;
 				font-style: italic;
+				white-space: normal;
 			}
 			small {
 				display: block;
